--- a/plugin.cfg
+++ b/plugin.cfg
@@ -3,5 +3,5 @@
 name="I, Voyager - Tree Saver"
 description="Generates a compact game-save data structure from properties specified in object constants in a scene tree. Sets properties and rebuilds procedural parts of the scene tree on game load."
 author="Charlie Whitfield"
-version="0.0.2.dev"
+version="v0.0.2.dev"
 script="editor_plugin.gd"
