--- a/plugin.cfg
+++ b/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="I, Voyager - Tree Saver"
-description="Generates a compact game-save data structure from properties specified in object constants in a scene tree. Sets properties and rebuilds procedural parts of the scene tree on game load."
+description="Generates a compact savegame data structure from properties specified in object constants in a scene tree. Sets properties and rebuilds procedural parts of the scene tree on load."
 author="Charlie Whitfield"
-version="v0.0.2.dev"
+version="v0.0.2"
 script="editor_plugin.gd"
